force-app/main/default/objects/Application_Contact__c/Application_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object that joins Job Applications to Contacts so that multiple Contacts can be associated to each Job Application</description>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>AppCon-{00000}</displayFormat>
        <label>Application Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>