force-app/main/default/objects/Application_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master-Detail relationship to the Contact object.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>