force-app/main/default/objects/Application_Contact__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>