force-app/main/default/objects/Application_Contact__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Primary Contact for the Job Application</description>
    <label>Is Primary?</label>
    <type>Checkbox</type>
</CustomField>